k8s/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      containers:
      - name: mysql
        image: mysql:8.0

        ports:
        - containerPort: 3306

        volumeMounts:
        - name: initdb
          mountPath: /docker-entrypoint-initdb.d

      volumes:
      - name: initdb
        configMap:
          name: mysql-initdb-config
